# rust_spotify_web_playback_sdk

./: Cargo.toml  README.md
.github/: FUNDING.yml
rust_spotify_web_playback_sdk/: Cargo.toml
rust_spotify_web_playback_sdk/src/: js_wrapper.rs  lib.rs  structs.rs  wrapper.js
rust_spotify_web_playback_sdk_macro/: Cargo.toml
rust_spotify_web_playback_sdk_macro/src/: lib.rs
src/: js_wrapper.rs  lib.rs  structs.rs  wrapper.js
