[package]
name = "rust_spotify_web_playback_sdk"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/KOEGlike/rust_spotify_web_playback_sdk"
license = "MIT OR Apache-2.0"
keywords = ["Spotify", "SDK", "web", "playback", "api", "wrapper", "wasm", "leptos", "dioxis",]
description = "a wrapper around the spotify Web Playback SDK for wasm porjects "

[dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
nestify = "0.3"
serde-wasm-bindgen = "=0.6"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"