[package]
name = "rust_spotify_web_playback_sdk_macro"
edition.workspace = true
publish = true
version = {workspace = true}
repository = "https://github.com/KOEGlike/rust_spotify_web_playback_sdk"
license = "MIT OR Apache-2.0"
keywords = ["Spotify", "SDK", "macro", "wrapper", "wasm"]
description = "the macros for the rust_spotify_web_playback_sdk"
documentation = "https://docs.rs/rust_spotify_web_playback_sdk_macro/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
